# spk

./: Cargo.toml
crates/spenv/: Cargo.toml
crates/spenv-cli/: Cargo.toml
crates/spenv-cli/src/: cmd_check.rs  cmd_init.rs  cmd_load.rs  cmd_lock.rs  cmd_shell.rs  cmd_show.rs  main.rs
crates/spenv/src/: bind.rs  bind_test.rs  compose.rs  compose_test.rs  discovery.rs  discovery_test.rs  environment.rs  environment_test.rs  error.rs  lib.rs  lock.rs  lock_test.rs  package.rs  repository.rs  repository_test.rs  runtime.rs  runtime_test.rs  spec.rs  spec_test.rs
crates/spfs/src/: status_macos.rs
docs/: spenv.md
